--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<meta name="twitter:site" content="@masaishi2001">
 	<meta name="twitter:title" content="ソースコードから理解するStable Diffusion">
 	<meta name="twitter:description" content="diffusersをシンプル化した、parediffusersというライブラリのコードを通じて、Latent Diffusion Modelsの画像生成の仕組みを解説するスライドです。">
-	<meta name="twitter:image" content="/images/ldm-4step-figure.webp">
+	<meta name="twitter:image" content="images/ldm-4step-figure.webp">
 	<meta name="twitter:image:alt" content="A detailed graphic illustrating the 4-step process of the Latent Diffusion Model.">
 </head>
