fix to summary_large_image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://masaishi.github.io/understand-stable-diffusion-slidev-ja">
 
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@masaishi2001">
 	<meta name="twitter:title" content="ソースコードから理解するStable Diffusion">
 	<meta name="twitter:description" content="diffusersをシンプル化した、parediffusersというライブラリのコードを通じて、Latent Diffusion Modelsの画像生成の仕組みを解説するスライドです。">
