Fix card img path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<meta property="og:title" content="ソースコードから理解するStable Diffusion">
 	<meta property="og:description" content="diffusersをシンプル化した、parediffusersというライブラリのコードを通じて、Latent Diffusion Modelsの画像生成の仕組みを解説するスライドです。">
-	<meta property="og:image" content="/images/card_img.webp">
+	<meta property="og:image" content="https://masaishi.github.io/understand-stable-diffusion-slidev-ja/images/card_img.webp">
 	<meta property="og:image:alt" content="A detailed graphic illustrating the 4-step process of the Latent Diffusion Model.">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://masaishi.github.io/understand-stable-diffusion-slidev-ja">
@@ -14,6 +14,6 @@
 	<meta name="twitter:site" content="@masaishi2001">
 	<meta name="twitter:title" content="ソースコードから理解するStable Diffusion">
 	<meta name="twitter:description" content="diffusersをシンプル化した、parediffusersというライブラリのコードを通じて、Latent Diffusion Modelsの画像生成の仕組みを解説するスライドです。">
-	<meta name="twitter:image" content="/images/card_img.webp">
+	<meta name="twitter:image" content="https://masaishi.github.io/understand-stable-diffusion-slidev-ja/images/card_img.webp">
 	<meta name="twitter:image:alt" content="A detailed graphic illustrating the 4-step process of the Latent Diffusion Model.">
 </head>
